# astronomical-ner

./: README.md  main.py  pyproject.toml
data/ads_abstracts/: ads_data_0028001-0030001_topup.json
data/models/: finetuning_results.json
data/models/astronomical_ner_finetuned/: meta.json
data/models/astronomical_ner_finetuned/ner/: moves
notebooks/: 01.Data-annotation.ipynb  02.ML-Pipeline.ipynb  03.Fine-Tuning-Pipeline.ipynb  doc.md
