[project]
name = "mlops-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "scikit-learn>=1.7.1",
    "spacy>=3.8.7",
    "spacy-lookups-data>=1.0.5",
]
